# good-scientific-software-for-free-python-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  factorial.py  pyproject.toml  test-pre-commit.py
