[tool.poetry]
name = "pre-commits-python-example"
version = "0.1.0"
description = "Example of how to use pre-commits in a python project"
authors = ["Sunniva Indrehus <sunniva.indrehus@ngi.no>"]
license = "MiT"
readme = "README.md"
packages = [{include = "pre_commits_python_example"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
